<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, Villena es gayer!</string>
    <string name="app_name">Filmoteca</string>
    <string name="image_title_desc">Imagen del título</string>
    <string name="image_search">Imagen del título</string>
    <string name="image_share">Imagen del título</string>
    <string name="image_navigator">Imagen del título</string>
    <string name="apk_name">Filmoteca de Albacete</string>
    <string name="iz">&lt;</string>
    <string name="de">&gt;</string>
	<string name="changelog_full_title">Change Log</string>
    <string name="changelog_title">What\'s New</string>
    <string name="changelog_ok_button">OK</string>
    <string name="changelog_show_full">more&#8230;</string>
    <string name="share">Compartir</string>
    <string name="filmaffinity">FilmAffinity</string>
    <string name="navegador">Navegador</string>
    <string name="developby">Desarrollado por:</string>
    <string name="albandroid">Asociación Juvenil Albandroid</string>
    <string name="web">http://www.albandroid.es</string>
    <string name="email">info@albandroid.es</string>
    <string name="findus">Escuela de Ingenieros Industriales - Aula 1.6</string>
</resources>